[package]
name = "rae-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "4.5.20"
const_format = "0.2.33"
html2text = { version = "0.13.2", features = ["css"] }
inquire = "0.7.5"
reqwest = { version = "0.12.8", features = ["blocking"] }
scraper = "0.20.0"
terminal-menu = "3.0.0"
termsize = "0.1.9"
